# revenium-middleware-google-python

./: CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
examples/: .env.example  README.md  __init__.py  getting_started_google_ai.py  getting_started_vertex_ai.py  simple_embeddings_test.py  simple_streaming_test.py  simple_test.py  trace_visualization_example.py
revenium_middleware_google/: __init__.py
revenium_middleware_google/common/: __init__.py  exceptions.py  protocols.py  trace_fields.py  types.py  url_standardization.py  utils.py
revenium_middleware_google/google_ai/: __init__.py  middleware.py  provider.py
revenium_middleware_google/vertex_ai/: __init__.py  middleware.py  provider.py
tests/: README.md  __init__.py  conftest.py  test_configuration.py  test_end_to_end.py  test_end_to_end_advanced.py  test_error_handling.py  test_helpers.py  test_metadata_transformation.py  test_model_names.py  test_provider_detection.py  test_stop_reasons.py  test_streaming.py  test_token_counting.py  test_trace_visualization.py  test_url_standardization.py
