[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["revenium_middleware_google", "revenium_middleware_google.common", "revenium_middleware_google.google_ai", "revenium_middleware_google.vertex_ai", "examples"]

[tool.setuptools.package-data]
examples = ["*.md", ".env.example"]

[project]
name = "revenium-middleware-google"
version = "0.2.0"
description = "A Python library that meters Google AI API usage to Revenium with support for both Gemini Developer API and Vertex AI."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  {name = "Revenium", email = "support@revenium.io"}
]
dependencies = [
  "wrapt",
  "revenium_middleware>=0.4.0"
]
keywords = ["google", "gemini", "vertex-ai", "middleware", "logging", "token-usage", "metering", "revenium", "ai", "llm"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
"Homepage" = "https://github.com/revenium/revenium-middleware-google-python"
"Bug Tracker" = "https://github.com/revenium/revenium-middleware-google-python/issues"
"Documentation" = "https://github.com/revenium/revenium-middleware-google-python/blob/main/README.md"

[project.optional-dependencies]
genai = [
  "google-genai>=0.1.0",
  "python-dotenv"
]
vertex = [
  "vertexai>=1.0.0",
  "python-dotenv"
]
all = [
  "google-genai>=0.1.0",
  "vertexai>=1.0.0",
  "python-dotenv"
]
examples = [
  "python-dotenv"
]
dev = [
  "pytest>=7.0.0",
  "pytest-cov",
  "flake8",
  "black",
  "mypy",
  "freezegun",
  "python-dotenv"
]
